docs/v4.0.2/_sources/gallery/experiment/sphere/sphere_Qsca_vs_diameter.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/experiment/sphere/sphere_Qsca_vs_diameter.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_experiment_sphere_sphere_Qsca_vs_diameter.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_experiment_sphere_sphere_Qsca_vs_diameter.py:


Sphere: Qsca vs diameter
========================

.. GENERATED FROM PYTHON SOURCE LINES 8-9

Importing the package dependencies: numpy, PyMieSim

.. GENERATED FROM PYTHON SOURCE LINES 9-47

.. code-block:: Python

    import PyMieSim
    import numpy as np
    from PyMieSim.units import ureg

    from PyMieSim.experiment.scatterer import Sphere
    from PyMieSim.experiment.source import Gaussian, PolarizationSet

    from PyMieSim.experiment import Setup
    from PyOptik import Material

    import PyMieSim
    PyMieSim.debug_mode = True

    Material.print_available()

    polarization_set = PolarizationSet(
        angles=[0.0] * ureg.degree,
    )

    source = Gaussian(
        wavelength=[405] * ureg.nanometer,
        polarization=polarization_set,
        optical_power=1e-3 * ureg.watt,
        numerical_aperture=0.2 * ureg.AU,
    )

    scatterer = Sphere(
        diameter=np.linspace(10, 1000, 150) * ureg.nanometer,
        medium_refractive_index=[1.33, 1.34, 1.5] * ureg.RIU,
        refractive_index=Material.polystyren,
        source=source,
    )

    experiment = Setup(scatterer=scatterer, source=source)

    dataframe = experiment.get("Qsca", scale_unit=True)

    dataframe.plot(x="scatterer:diameter", show=True)



.. image-sg:: /gallery/experiment/sphere/images/sphx_glr_sphere_Qsca_vs_diameter_001.png
   :alt: sphere Qsca vs diameter
   :srcset: /gallery/experiment/sphere/images/sphx_glr_sphere_Qsca_vs_diameter_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    +-----------------------+-----------------------+
    | Sellmeier Materials   | Tabulated Materials   |
    +=======================+=======================+
    | SF11                  | pva                   |
    +-----------------------+-----------------------+
    | air                   | gold                  |
    +-----------------------+-----------------------+
    | test_sellmeier_file   | titanium              |
    +-----------------------+-----------------------+
    | soda_lime_glass       | zinc                  |
    +-----------------------+-----------------------+
    | crown                 | paladium              |
    +-----------------------+-----------------------+
    | BAK1                  | bismuth               |
    +-----------------------+-----------------------+
    | ZBLAN                 | polyetylene           |
    +-----------------------+-----------------------+
    | BAF10                 | aluminium             |
    +-----------------------+-----------------------+
    | pvc                   | silicon               |
    +-----------------------+-----------------------+
    | FK51A                 | sodium                |
    +-----------------------+-----------------------+
    | LASF9                 | calcium               |
    +-----------------------+-----------------------+
    | polystyren            | nickel                |
    +-----------------------+-----------------------+
    | SF10                  | test_tabulated_file   |
    +-----------------------+-----------------------+
    | fused_silica          | chromium              |
    +-----------------------+-----------------------+
    | germanium             | vanadium              |
    +-----------------------+-----------------------+
    | lithium_niobate       | tantalum              |
    +-----------------------+-----------------------+
    | water                 | magnesium             |
    +-----------------------+-----------------------+
    | SF5                   | example_tabulated     |
    +-----------------------+-----------------------+
    | BK7                   | copper                |
    +-----------------------+-----------------------+
    | argon                 | lead                  |
    +-----------------------+-----------------------+
    | ethanol               | iron                  |
    +-----------------------+-----------------------+
    | propanol              | tungsten              |
    +-----------------------+-----------------------+
    | ethylene              | silver                |
    +-----------------------+-----------------------+
    | acetylene             | rhodium               |
    +-----------------------+-----------------------+
    | cellulose             |                       |
    +-----------------------+-----------------------+
    | methane               |                       |
    +-----------------------+-----------------------+
    | flint                 |                       |
    +-----------------------+-----------------------+
    | acetone               |                       |
    +-----------------------+-----------------------+
    | polycarbonate         |                       |
    +-----------------------+-----------------------+
    | glycerol              |                       |
    +-----------------------+-----------------------+
    | ethane                |                       |
    +-----------------------+-----------------------+
    | polystyrene           |                       |
    +-----------------------+-----------------------+
    | example_sellmeier     |                       |
    +-----------------------+-----------------------+
    | methanol              |                       |
    +-----------------------+-----------------------+
    /opt/hostedtoolcache/Python/3.11.14/x64/lib/python3.11/site-packages/PyOptik/material/base_class.py:60: UserWarning: Wavelength range goes from 405.0 nanometer to 405.0 nanometer which is outside the allowable range of 436.79999999999995 nanometer to 1.052 micrometer µm. [Material: polystyren]
      warnings.warn(

    <Figure size 800x500 with 1 Axes>




.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.257 seconds)


.. _sphx_glr_download_gallery_experiment_sphere_sphere_Qsca_vs_diameter.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: sphere_Qsca_vs_diameter.ipynb <sphere_Qsca_vs_diameter.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: sphere_Qsca_vs_diameter.py <sphere_Qsca_vs_diameter.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: sphere_Qsca_vs_diameter.zip <sphere_Qsca_vs_diameter.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
